crates/stepflow-main/tests/snapshots/test_run__run_tests@custom_component_simple.yaml.snap
---
source: crates/stepflow-main/tests/test_run.rs
description: case 0
expression: result
info:
  x: 3
  y: 4
input_file: crates/stepflow-main/tests/flows/custom_component_simple.yaml
---
outcome: success
result:
  custom_calculation: 13.892443989449804
  product: 12
  sum: 7
