crates/stepflow-main/tests/snapshots/test_run__run_tests@error_use_default.yaml.snap
---
source: crates/stepflow-main/tests/test_run.rs
description: case 0
expression: result
info:
  mode: error
input_file: crates/stepflow-main/tests/flows/error_use_default.yaml
---
outcome: success
result:
  error_result: ~
