crates/stepflow-main/tests/snapshots/test_run__run_tests@error_use_default_value.yaml-2.snap
---
source: crates/stepflow-main/tests/test_run.rs
description: case 1
expression: result
info:
  mode: succeed
input_file: crates/stepflow-main/tests/flows/error_use_default_value.yaml
---
outcome: success
result:
  error_result: succeeded
